k8s/overlays/aws/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api
spec:
  replicas: 3
  template:
    spec:
      automountServiceAccountToken: true
